--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,8 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 pytest==8.3.3
 python-dateutil==2.8.2
-pywinpty==0.5.7
+pywinpty==0.5.7; sys_platform == 'win32'
+
 pyzmq==22.3.0
 qtconsole==5.1.1
 QtPy==1.11.2
