--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,4 +19,4 @@ jobs:
       run: pip install flake8
 
     - name: Run Flake8
-      run: flake8 src/quiz_controller.py quiz_model.py quiz_service.py test_quiz.py
+      run: flake8 quiz_controller.py quiz_model.py quiz_service.py test_quiz.py
